--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,207 @@
-body {
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* reset end */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* container */
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+/* header */
+header {
+  background-color: #49b2f2;
+  text-align: center;
+  color: #fff;
+  font-size: 40px;
+  font-family: VT323, monospace;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+/* content */
+.form {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.form input {
+  width: 45%;
+  height: 40px;
+  font-size: 30px;
+}
+.form button {
+  border: none;
+  font-size: 16px;
+  color: #fff;
+  font-weight: bold;
+  background-color: rgba(41, 128, 185, 1);
+}
+.form input::-webkit-input-placeholder {
+  font-family: VT323, monospace;
+}
+
+/* meme */
+.meme {
+  position: relative;
+}
+.meme img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+.meme h2 {
+  color: white;
+  font-family: VT323, monospace;
+  font-size: 40px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000,
+    0 -2px 0 #000, -2px 0 0 #000, 2px 2px 5px #000;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.meme .top {
+  top: 5%;
+}
+.meme .bottom {
+  bottom: 5%;
 }
